[gd_scene load_steps=7 format=3 uid="uid://buon2mtc7x5m4"]

[ext_resource type="Script" path="res://scene/ui/main_menu.gd" id="1_i3etc"]
[ext_resource type="Theme" uid="uid://nd2u72aiasw8" path="res://resource/UI_theme.tres" id="1_yi4ks"]
[ext_resource type="AudioStream" uid="uid://dcdhb2nqelsv3" path="res://assets/music/title music final.wav" id="3_1h3pg"]
[ext_resource type="Script" path="res://scene/ui/ui_sfx.gd" id="4_c0lnw"]
[ext_resource type="Texture2D" uid="uid://vgam182o5ysb" path="res://assets/tileset/menu_bg.png" id="4_ybdeq"]
[ext_resource type="PackedScene" uid="uid://cg2matkx410x5" path="res://scene/ui/hover_particle.tscn" id="7_giq17"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yi4ks")
script = ExtResource("1_i3etc")

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1h3pg")
autoplay = true
bus = &"Music"

[node name="sfx" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
script = ExtResource("4_c0lnw")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 720.0
offset_bottom = 480.0
scale = Vector2(0.9, 0.9)
texture = ExtResource("4_ybdeq")
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="Game title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "G. R A. V. Y."

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="HighscoresButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "High Scores"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Settings
"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Credits"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="hover particle" parent="MarginContainer/VBoxContainer/VBoxContainer2" instance=ExtResource("7_giq17")]
visible = false
position = Vector2(102, 160)

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="play_hover" from="MarginContainer/VBoxContainer/VBoxContainer2/hover particle" to="sfx" method="play_hover_sfx"]
